--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@eslint/eslintrc": "^3",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.1.6",
+    "eslint-plugin-validate-jsx-nesting": "^0.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
